issue #195 #191 : Made all the changes
I had modified Hacktoberfest 2020 to Hacktoberfest 2021 . Also, I had added my info on the website and made all the required changes.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,48 @@
+body
+{
+	
+	background-color: pink;
+}
 h1{
     text-align: center;
-    color:red;
+    color:purple;
 }
 
 p{
-    font-size: 10px;
+    font-size: 20px;
+}
+.name
+{
+	color: blue;
+}
+.image
+{
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 12%;
+  
+}
+.I1
+{
+	color:orange;
+}
+.N
+{
+	color:white;
+}
+.D
+{
+	color:green;
+}.I2
+{
+	color:orange;
+}
+.A
+{
+	color:white;
+}
+.age
+{
+	color:red;
 }
